added Google Maps layers

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -173,8 +173,15 @@ div[role="tooltip"] div { font-weight:bold;font-size:16px; }
 .leaflet-tooltip { padding:15px;}
 .leaflet-tooltip h2 {  font-size:16px; padding-bottom:0;margin:0 !important;margin-bottom:5px !important;}
 .leaflet-tooltip h2 svg { display:none;}
-.placeMap .leaflet-bottom .leaflet-control { margin:0 !important;background: rgba(255, 255, 255, 0.7); }
+.placeMap .leaflet-bottom .leaflet-control { margin:0 !important;background: rgba(255, 255, 255, 0.7);}
+.placeMap .leaflet-bottom > .leaflet-control { padding:3px; }
+.placeMap .leaflet-bottom > .leaflet-control > .leaflet-control { background:none; }
+.placeMap .leaflet-bottom.leaflet-right { margin-bottom:0px !important; }
 .placeMap:not(.large) .leaflet-control { font-size:11px !important; }
+
+.placeMap .gmnoprint { display:none;}
+.gm-style > iframe + div {  margin-bottom:20px; }
+.placeMap.large .gm-style > iframe + div {  margin-bottom:25px; }
 
 body {overflow-x:hidden; }
 
