--- a/src/components/App.css
+++ b/src/components/App.css
@@ -158,8 +158,11 @@ div[role="tooltip"] div { font-weight:bold;font-size:16px; }
 .resource .SidePane .data .subsub.new > div > label { font-size:14px;}
 .resource .SidePane .data .subsub.new > div > label + div::before { border-color:rgba(0,0,0,0.15); }
 .resource .SidePane .data .subsub.new > div > label + div { font-size:12px;}
-.resource .SidePane .data .anno.new + .sub + .sub { padding-top:30px;} 
+.resource .SidePane .data .anno.new + .sub + .sub { padding-top:30px;}
 /* .resource .SidePane .data .subsub.new label + div { margin-top:0; } */
+
+
+[role=menuitem].current { text-decoration:underline !important; }
 
 .goBack { text-decoration: none; }
 .goBack:not(:first-child):not(.noML) { margin-left:35px !important; }
