--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5,6 +5,7 @@
 /* CSS debug mode */
  /* * {background-color:rgba(255,0,128,0.05);} */
 
+
 body { overflow:auto !important;padding-right:0 !important; }
 
 #login { position:absolute; top:0;right:0; }
@@ -272,6 +273,8 @@ svg.hide { opacity:0;pointer-events:none; }
 .pdfMenu b { display:inline-block; white-space: nowrap;}
 .pdfLoading,.zipLoading { color:white; }
 .pdfSpinner,.zipSpinner { left: 55% !important;  top: 45% !important; }
+
+#viewer.mirador-container { position:fixed;width:100%;height:100%;top:0;left:0;z-index:10; }
 
 .App {
   text-align: center;
