--- a/src/components/App.css
+++ b/src/components/App.css
@@ -6,7 +6,7 @@
  /* * {background-color:rgba(255,0,128,0.05);} */
 
 
-body { overflow:auto !important;padding-right:0 !important; }
+body { overflow:auto !important;padding-right:0 !important;  }
 
 #login { position:absolute; top:0;right:0; }
 
@@ -244,13 +244,15 @@ div.match div.multi > span:not(:last-child)::after { content:", "; }
 
 #UView { width:800px;height:480px;border:none; overflow:visible; }
 
-#fondUV:not(.hide) { position:fixed;width:100%;height:100%;background:rgba(0,0,0,0.5); left:0;top:0;z-index:10; }
-#fondUV.hide * { display:none !important; }
+#fond:not(.hidden) { position:fixed;width:100%;height:100%;background:rgba(0,0,0,0.5); left:0;top:0;z-index:10; }
+#fond.hidden * { display:none !important; }
 
 svg.hide { opacity:0;pointer-events:none; }
 
-.uv.toggled:not(.hide) iframe { z-index:10 !important;position:fixed !important;width:100% !important;left:0 !important;height:calc(100vh) !important;top:0 !important;  } */ */ */ */
-.uv.hide { display:none !important;}
+.uv:not(.hidden),.uv:not(.hide),uv.toggled:not(.hide) iframe { z-index:10 !important;position:fixed !important;width:100% !important;left:0 !important;height:calc(100vh) !important;top:0 !important;
+   z-index:11;
+}
+.uv.hidden,.uv.hide { display:none !important;}
 
 .uvDefault { box-shadow: 0 0 10px black;display:inline-block;padding:5px;background:rgba(0,0,0,1.0);position:relative; min-width:100px;min-height:100px; }
 .uvDefault img {max-width:100%; position:relative;z-index:1; max-height:444px;}
@@ -264,8 +266,8 @@ svg.hide { opacity:0;pointer-events:none; }
 
 .uvLoader { z-index:0 !important;}
 
-#diva-wrapper { top: 0;left: 0; position: fixed; width: 100%; height: calc(100% - 10px); z-index: 10;
-   background: white; padding-top: 10px; }
+#diva-wrapper { top: 0;left: 0; position: fixed; width: 100%; height: calc(100% - 10px);
+   background: white; padding-top: 10px; z-index:11;}
 /*#diva-wrapper > div { top: 0;left: 0; position: fixed; width: 100%; height: calc(100% - 100px) !important; z-index: 10;
    background: white; padding-top: 10px; }*/
 #diva-wrapper.hidden { display:none; }
@@ -287,7 +289,7 @@ svg.hide { opacity:0;pointer-events:none; }
 .pdfLoading,.zipLoading { color:white; }
 .pdfSpinner,.zipSpinner { left: 55% !important;  top: 45% !important; }
 
-#viewer.mirador-container { position:fixed;width:100%;height:100%;top:0;left:0;z-index:10; }
+#viewer.mirador-container { position:fixed;width:100%;height:100%;top:0;left:0;z-index:11; }
 #collection-tree > ul > li[role=treeitem]:nth-child(-n+2) { display:none; }
 .jstree-default .jstree-anchor {  line-height: 42px; height: 42px;  font-size: 20px; }
 .jstree-default .jstree-icon:empty { line-height: 42px;  padding-right: 4px; }
