more configuration of mirador UI / #39 + reading view button

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -301,6 +301,8 @@ svg.hide { opacity:0;pointer-events:none; }
 .mirador-container .mirador-viewer ul.scroll-listing-thumbs li  { display:block; }
 .mirador-container .mirador-viewer ul.scroll-listing-thumbs li img { max-width: 100%; height: auto; cursor:pointer; }
 
+.mirador-container #manifest-select-menu .remove-object-option { display:none !important; }
+
 
 .App {
   text-align: center;
