fixed viewer opening bug when browsing several Works in a row

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -271,8 +271,8 @@ svg.hide { opacity:0;pointer-events:none; }
 /*#diva-wrapper > div { top: 0;left: 0; position: fixed; width: 100%; height: calc(100% - 100px) !important; z-index: 10;
    background: white; padding-top: 10px; }*/
 #diva-wrapper.hidden { display:none; }
-#diva-wrapper #diva-1-tools { text-align:center; }
-#diva-wrapper #diva-1-tools select#volume { display:inline-block; font-size:16px;height:28px; margin-top:10px;
+#diva-wrapper .diva-tools { text-align:center; }
+#diva-wrapper .diva-tools select#volume { display:inline-block; font-size:16px;height:28px; margin-top:10px;
    padding:0 10px;margin-left:15px;}
 .diva-tools-right { width:400px; }
 .diva-tools-left { padding-right:100px; width:300px;}
