--- a/src/components/App.css
+++ b/src/components/App.css
@@ -299,13 +299,13 @@ svg.hide { opacity:0;pointer-events:none; }
 .jstree-icon.jstree-ocl { vertical-align: -16px; }
 #collection-tree.jstree { width: 20%;  max-width: 10000px; }
 #collection-tree + .member-select-results { margin-left: 20%; }
-/* vertical scrollview in mirador*/
+/* vertical scrollview in mirador */
 .mirador-container .mirador-viewer .scroll-view { overflow-y:auto; }
 .mirador-container .mirador-viewer ul.scroll-listing-thumbs li  { display:block; }
 .mirador-container .mirador-viewer ul.scroll-listing-thumbs li img { max-width: 100%; height: auto; cursor:pointer; }
 /* menu configuration */
 .mirador-container #manifest-select-menu .remove-object-option { display:none !important; }
-.mirador-viewer .view-container .thumbnail-view { display:none !important;opacity:0 !important;z-index:-10000 ! important;}
+.mirador-viewer .view-container .thumbnail-view { opacity:0 !important;z-index:-10000 ! important; pointer-events: none;}
 .mirador-main-menu:empty,
 .mirador-btn.mirador-icon-view-type,
 .mirador-btn.mirador-icon-window-menu,
@@ -314,6 +314,7 @@ svg.hide { opacity:0;pointer-events:none; }
 .mirador-container .window-manifest-title { margin-top: 0px !important; line-height: 35px;  }
 .user-buttons.mirador-main-menu { width:100%; }
 .user-buttons.mirador-main-menu li:last-child { float:right; }
+
 
 .App {
   text-align: center;
