--- a/src/components/App.css
+++ b/src/components/App.css
@@ -315,13 +315,20 @@ svg.hide { opacity:0;pointer-events:none; }
 .user-buttons.mirador-main-menu { width:100%; }
 .user-buttons.mirador-main-menu li:last-child { float:right; }
 /* diva style zoom */
-.mirador-container ul.scroll-listing-thumbs { max-width:10000px;display:block;text-align:center;position:static;width:fit-content;  }
+.mirador-container ul.scroll-listing-thumbs { max-width:10000px;display:block;text-align:center;position:static;width:fit-content;
+
+   transition:transform-origin 1000ms linear ;
+}
 .mirador-container .mirador-viewer ul.scroll-listing-thumbs li {  width:auto;display:block;position:relative; }
 .mirador-container .mirador-viewer ul.scroll-listing-thumbs li img { position:relative; }
 .mirador-container ul.scroll-listing-thumbs li .thumb-label { display:inline-block; }
-.user-buttons.mirador-main-menu li:nth-last-child(2) { padding-left:5px;cursor:default;  }
-.user-buttons.mirador-main-menu li:nth-last-child(3) { padding-right:5px;cursor:default;  }
-
+.user-buttons.mirador-main-menu li:nth-last-child(3) { padding-left:5px;cursor:default;  }
+.user-buttons.mirador-main-menu li:nth-last-child(4) { padding-right:0px;cursor:default;  }
+.user-buttons.mirador-main-menu li:nth-last-child(4).on a {opacity:1; }
+.user-buttons.mirador-main-menu li:nth-last-child(n+3):nth-last-child(n-4).off { opacity:0.2;pointer-events:none;  }
+.mirador-container .mirador-main-menu li:not(.on) input,
+.mirador-container .mirador-main-menu li:not(.on):not(:last-child):not(:first-child) { opacity:0;pointer-events:none;transition:all 400ms ease-in-out; }
+.mirador-container .mirador-main-menu li a.selec {opacity:1; pointer-events:auto; }
 
 .App {
   text-align: center;
