--- a/src/components/App.css
+++ b/src/components/App.css
@@ -110,7 +110,8 @@ div[role="tooltip"] div { font-weight:bold;font-size:16px; }
 .person #person, .place #place { display:none;}
 
 .match .multi a,
-.resource .data a { text-decoration: none; color:rgba(229, 74, 53,1);}
+.resource .data a, a.login { text-decoration: none; color:rgba(229, 74, 53,1);}
+a.login { text-decoration:underline; cursor:pointer; }
 .match .multi a:hover,
 .resource .data a:hover { border-bottom:1px solid rgba(229, 74, 53,1); }
 
