add documentation to embed viewer

--- a/src/lib/mirador.css
+++ b/src/lib/mirador.css
@@ -52,3 +52,5 @@
 .mirador-container .canvas-count { text-align: left; }
 .mirador-container .remaining { display:none; }
 .mirador-container .preview-images a:not(:first-child) { display:none; }
+
+#viewer.demo .user-buttons.mirador-main-menu li:last-child { display:none; }
