added button example in viewer doc

--- a/src/lib/mirador.css
+++ b/src/lib/mirador.css
@@ -53,4 +53,4 @@
 .mirador-container .remaining { display:none; }
 .mirador-container .preview-images a:not(:first-child) { display:none; }
 
-#viewer.demo .user-buttons.mirador-main-menu li:last-child { display:none; }
+/* #viewer.demo .user-buttons.mirador-main-menu li:last-child { display:none; } */
