--- a/src/components/App.css
+++ b/src/components/App.css
@@ -104,8 +104,10 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 
 .resource .data h3 a.propref,.resource .data h4 a.propref { color:black; }
 .resource .data h3 a.propref:hover,.resource .data h4 a.propref:hover { border-bottom:1px solid black;}
-div[role="tooltip"] { margin:30px;  }
-div[role="tooltip"] div { font-weight:bold;font-size:16px; }
+div[role="tooltip"] { margin:30px; max-width:400px;  }
+div[role="tooltip"] > div { font-weight:bold;font-size:16px; }
+.commentP,.commentT {max-width:700px !important; }
+.commentT { padding:10px !important;}
 
 .person #person, .place #place { display:none;}
 
