added show/hide button on properties with >3 values eg hasPart

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -120,9 +120,14 @@ a.login { text-decoration:underline; cursor:pointer; }
 .resource button svg:hover { color:rgba(0,0,0,0.65); }
 
 .resource .data > div > h4,
-.resource .data > div > .sub > h4:not(.first) { width:100%; padding-left:30px; }
+.resource .data > div > .sub > h4:not(.first),
+.propCollapse h4 { width:100%; padding-left:30px; }
 .resource .data > div > h4::after,
-.resource .data > div > .sub > h4:not(.first)::after { display:none !important; }
+.resource .data > div > .sub > h4:not(.first)::after,
+.propCollapse h4::after { display:none !important; }
+h3 .expand { display:inline-block; cursor:pointer;}
+h3 .expand svg { position:absolute; margin-top:-18px; }
+.propCollapse.in-false h4:first-child { margin-top:0;transition:all 200ms ease-in-out; }
 
 .resource .SidePane .viewAll { color:black; cursor:pointer; margin-bottom:10px;display:inline-block;border-bottom:1px solid transparent;}
 .resource .SidePane .viewAll:hover { border-color:black !important; }
