--- a/src/components/App.css
+++ b/src/components/App.css
@@ -11,6 +11,9 @@ body { overflow:auto !important;padding-right:0 !important;  }
 #login { position:absolute; top:0;right:0; }
 #login button {color:rgba(0,0,0,0.54); }
 
+#top-left { position:absolute; top:0;left:0; }
+#top-left button {color:rgba(0,0,0,0.54); }
+
 #pagine { width:100%;display:flex;padding:20px;justify-content: space-between; box-sizing:border-box}
 #pagine svg {height:36px;width:36px; cursor:pointer;}
 
@@ -70,7 +73,7 @@ h2:hover svg.annoticon:hover,h4:hover svg.annoticon:hover { color:rgba(0,0,0,0.6
 h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 /* h4 + h4 { margin-top:5px;}  */
 
-.resource { width:100% ; padding:50px 100px; text-align:left; box-sizing: border-box;}
+.resource { width:100% ; padding:90px 100px; text-align:left; box-sizing: border-box;}
 .resource .data { text-align:left }
 .resource .data > div { display:flex;align-items:baseline;flex-wrap:wrap;box-sizing: border-box;width:100%;}
 .resource .data > div.parent { flex-wrap:wrap; }
@@ -183,7 +186,7 @@ h3 .expand svg { position:absolute; margin-top:-18px; }*/
 [role=menuitem].current { text-decoration:underline !important; }
 
 .goBack { text-decoration: none; }
-.goBack:not(:first-child):not(.noML) { margin-left:35px !important; }
+/* .goBack:not(:first-child):not(.noML) { margin-left:35px !important; } */
 .goBack button { min-width:0 !important;margin-left:0 !important; }
 
 #iiif { padding:0;min-width:48px;min-height: 48px;border-radius:50%;}
