--- a/src/components/App.css
+++ b/src/components/App.css
@@ -29,6 +29,8 @@ body { overflow:auto !important;padding-right:0 !important;  }
 #pagine div a { cursor:pointer; display:inline-block;margin-left:5px;margin-right:5px;}
 #pagine div a:hover { text-decoration:underline; }
 
+#results > li > h4 + svg { margin-top:10px; }
+
 a.result { padding:0;margin-bottom:10px;width:100%;display: inline-block;margin-top:0px;}
 a.result button { text-transform:none; padding-bottom:0;}
 /* a.result button::before { content:'Abstract Works';display:block;height:50px;position:absolute;left:0; }  */
@@ -56,6 +58,8 @@ a.result .contenu ul > div:last-child {
    flex: 1 1 auto;
    min-width: 0;
 }
+
+a.result .contenu ul > div:last-child h3 > span:first-child { word-break: break-all; }
 
 a.result .contenu ul > div:last-child h3 {
     color: rgba(0, 0, 0, 0.87); font-size: 1rem; font-weight: 400; font-family: "Roboto", "Helvetica", "Arial", sans-serif;
@@ -376,4 +380,6 @@ svg.hide { opacity:0;pointer-events:none; }
    body { min-width:calc(100% - 400px);}
    .SearchPane { width: calc(100% - 400px); }
    .SidePane:not(.visible) + .SearchPane { width:100%; }
+
+   #data-checkbox { justify-content: center;padding-left:0px;padding-right:110px; }
 }
