--- a/src/components/App.css
+++ b/src/components/App.css
@@ -122,7 +122,9 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 
 .resource .data #etext-scroll,
 .resource .data .chunk { display:block;}
-.resource .data .chunk ~ h4 { font-size:25px;line-height:40px;margin-bottom:10px; display:inline; }
+.resource .data .chunk ~ h4 { font-size:24px;line-height:40px;margin-bottom:10px; display:inline; }
+.resource .data .chunk.page ~ h4 { display:inline-block; padding-left:0; border-top:1px solid black; padding-top:30px;}
+.resource .data .chunk.page ~ h4 + h3 { display:block; }
 
 .resource .data h3 a.propref,.resource .data h4 a.propref { color:black; }
 .resource .data h3 a.propref:hover,.resource .data h4 a.propref:hover { border-bottom:1px solid black;}
