--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,7 +3,7 @@
 
 
 /* CSS debug mode */
- * {background-color:rgba(255,0,128,0.05);}
+ /* * {background-color:rgba(255,0,128,0.05);} */
 
 
 body { overflow:auto !important;padding-right:0 !important;  }
@@ -126,13 +126,16 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 .resource .data .chunk, .etextPage { display:block; position: relative;}
 .resource .data .chunk ~ h4, .etextPage h4 { font-size:24px;line-height:40px;margin-bottom:10px; display:inline; }
 
-.etextPage { border-top:1px solid #999; padding-top:25px; }
-.etextPage h4.page { display:inline-block; padding-left:0; width:100%;margin-bottom:0;}
+.etextPage { border-top:1px solid #999; padding-top:25px;  }
+.etextPage h4.page { display:inline-block; padding-left:0; width:100%;margin-bottom:0; font-size:calc( 28 * 100vw / 2500) ;  line-height:calc( 60 * 100vw / 2500) ; }
 .etextPage h4.page:last-child { padding-bottom:25px; }
 .etextPage h5 { margin-top:0; color:#777; display:inline-block; }
+.etextPage h4 + h5 { margin-top:15px;margin-bottom:30px;}
 .etextPage > img, .etextPage h5 a { cursor:pointer; }
-.etextPage > img { box-shadow:1px 1px 7px rgba(0,0,0.2); display:block;}
-.etextPage button { margin-left:-12px !important; }
+.etextPage > img { box-shadow:1px 1px 7px rgba(0,0,0.2); display:block; max-width:100%; margin-bottom:20px;}
+.etextPage button { margin-left:-8px !important; }
+.etextPage button img { height:28px;transform:rotate(-90deg); opacity:0.75;}
+.etextPage button:hover img { opacity:1;}
 .etextPage.manifest-error h5, .etextPage.manifest-error button { opacity:0.5;pointer-events:none; }
 
 .resource .data h3 a.propref,.resource .data h4 a.propref { color:black; }
