--- a/src/components/App.css
+++ b/src/components/App.css
@@ -124,7 +124,7 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 
 .resource .data #etext-scroll,
 .resource .data .chunk, .etextPage { display:block; position: relative;}
-.resource .data .chunk ~ h4, .etextPage h4 { font-size:24px;line-height:40px;margin-bottom:10px; display:inline; }
+.resource .data .chunk ~ h4, .etextPage h4.page { font-size:24px;line-height:40px;margin-bottom:10px; display:inline; }
 
 .etextPage { border-top:1px solid #999; padding-top:25px;  }
 .etextPage h4.page { display:inline-block; padding-left:0; /*width:100%; */margin-bottom:0; font-size:calc( 32 * 100vw / 2500) ;  line-height:calc( 60 * 100vw / 2500) ; 
@@ -134,7 +134,7 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 .etextPage .overpage { overflow-x: auto; }
 .etextPage h5 { margin-top:0; color:#777; display:inline-block; }
 .etextPage h4 + h5 { margin-top:15px;margin-bottom:30px;}
-/* .etextPage img.page, .etextPage h5 a { cursor:pointer; } */
+.etextPage img.page, .etextPage h5 a, .etextPage .small a { cursor:pointer; } 
 .etextPage img.page { box-shadow:1px 1px 7px rgba(0,0,0.2); display:block; max-width:100%; margin-bottom:0px; margin-top:3px;
    margin-left: auto; margin-right: auto;}
 .etextPage button { margin-left:-8px !important; }
