--- a/src/components/App.css
+++ b/src/components/App.css
@@ -144,6 +144,13 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 .etextPage button:hover img { opacity:1;}
 .etextPage.manifest-error h5, .etextPage.manifest-error button { opacity:0.5;pointer-events:none; }
 .etextPage .small { /* transform:scale(0.8);*/ width:100%; text-align:center;  margin-bottom:25px;margin-top:10px;}
+.etextPage > div { position:relative; }
+.etextPage > div .lang { position:absolute;line-height:24px;  }
+/* .etextPage .toggle-volume { font-size:12px; } */
+/* .etextPage .close { position:absolute; bottom:6px;left:80px;opacity:0} */
+.etextPage .close { opacity:0}
+.etextPage:hover > div .close { opacity:1;  }
+.etextPage:hover > div .close svg { font-size:29px; margin-top:-2px; margin-left:8px;}
 
 .resource .data h3 a.propref,.resource .data h4 a.propref { color:black; }
 .resource .data h3 a.propref:hover,.resource .data h4 a.propref:hover { border-bottom:1px solid black;}
