--- a/src/components/App.css
+++ b/src/components/App.css
@@ -150,7 +150,8 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 /* .etextPage .close { position:absolute; bottom:6px;left:80px;opacity:0} */
 .etextPage .close { opacity:0}
 .etextPage:hover > div .close { opacity:1;  }
-.etextPage:hover > div .close svg { font-size:29px; margin-top:-2px; margin-left:8px;}
+.etextPage:hover > div .close svg { font-size:30px; }
+.etextPage:hover > div .close  { margin-top:0px; left:6px;}
 
 .resource .data h3 a.propref,.resource .data h4 a.propref { color:black; }
 .resource .data h3 a.propref:hover,.resource .data h4 a.propref:hover { border-bottom:1px solid black;}
