--- a/src/components/App.css
+++ b/src/components/App.css
@@ -112,7 +112,7 @@ h4 { margin-top:10px;margin-bottom:0px;font-size:24px; }
 .resource .subsub.full > h4.first { width:100%; }
 .resource h3 + .sub .subsub:first-child { margin-top:0px; }
 .resource .subsub h4:not(.first):not(:last-child):after,
-.resource h4:not(:last-child):not(.first):not(.last):not(.page):after { content:" | "; pointer-events:none; }
+.resource h4:not(:last-child):not(.first):not(.last):not(.page):after { content:" | "; pointer-events:none; padding-right:30px; }
 .resource .subsubsub { width:100%; padding-left:30px; display: flex;align-items: baseline;flex-wrap:nowrap;position:relative; box-sizing: border-box;}
 .resource .subsubsub .subsubsub h4.first.prop,.resource .subsub.full .subsubsub h4.first.prop,
 .resource .sub .sub h4.first.type { font-style:normal; }
@@ -193,6 +193,8 @@ a.download:hover { text-decoration:underline; }
 
 .resource .data > div > h4,
 .resource .data > div > .sub > h4:not(.first),
+/* .resource .data > div > .sub > .subsub > h4:not(.first),  */
+/* :not(:nth-child(2):last-child), */
 .propCollapse h4,
 .propCollapseHeader h4 { width:100%; padding-left:30px; }
 .resource .data > div > h4::after,
