hide first image of bdr:WIA_BCA when opening mirador

--- a/src/lib/mirador.css
+++ b/src/lib/mirador.css
@@ -58,3 +58,5 @@
 .window-manifest-navigation a span { display:inline-block;margin-top:-2px;}
 
 #gotoPage.error { color:red ; }
+
+.scroll-view [data-image-id="https://iiif.archivelab.org/iiif/rashodgson13$0/canvas"] { display:none !important; }
